create barebones html structure

--- a/index.html
+++ b/index.html
@@ -21,8 +21,158 @@
             <!-- Large profile pic -->
             <p>Hi there,</p>
             <p>Eliott Lopianowski &#49;@useless.consumer&#41;</p>
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
         </div>
     </header>
+    
+    <div class="navigation">
+        <!-- Dashboard Icon -->
+        <h1>Dashboard</h1>
+        <div class="navOne">
+            <div>
+                <!-- home icon -->
+                <h2>Home</h2>
+            </div>
+            <div>
+                <!-- profile icon -->
+                <h2>Profile</h2>
+            </div>
+            <div>
+                <!-- messages icon -->
+                <h2>messages</h2>
+            </div>
+            <div>
+                <!-- history icon -->
+                <h2>History</h2>
+            </div>
+            <div>
+                <!-- Tasks icon -->
+                <h2>Tasks</h2>
+            </div>
+            <div>
+                <!-- Communities icon -->
+                <h2>Communities</h2>
+            </div>
+        </div>
+        <div class="navTwo">
+            <div>
+                <!-- settings icon -->
+                <h2>Settings</h2>
+            </div>
+            <div>
+                <!-- support icon -->
+                <h2>Support</h2>
+            </div>
+            <div>
+                <!-- privacy icon -->
+                <h2>Privacy</h2>
+            </div>
+        </div>
+    </div>
+
+    <div class="projectsPanel">
+        <h2 id="projectsH2">Your Projects</h2>
+
+        <div class="project">
+            <h3>Initial Project</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                labore et dolore magna aliqua. Tellus rutrum tellus pellentesque eu tincidunt tortor aliquam
+                nulla. Et ultrices neque ornare aenean euismod elementum nisi quis.</p>
+            <!-- icon -->
+            <!-- icon -->
+            <!-- icon -->
+        </div>
+        <div class="project">
+            <h3>Secondary Project</h3>
+            <p>Tristique senectus et netus et malesuada. Sodales neque sodales ut etiam sit. Fringilla ut morbi 
+                tincidunt augue interdum velit. Lectus nulla at volutpat diam ut. Magnis dis parturient montes 
+                nascetur ridiculus mus mauris vitae ultricies. Felis eget velit aliquet sagittis id consectetur 
+                purus. Nisi scelerisque eu ultrices vitae.</p>
+            <!-- icon -->
+            <!-- icon -->
+            <!-- icon -->
+        </div>
+        <div class="project">
+            <h3>Impossible App</h3>
+            <p>Vitae sapien pellentesque habitant morbi tristique senectus et. Nisi quis eleifend quam adipiscing vitae.</p>
+            <!-- icon -->
+            <!-- icon -->
+            <!-- icon -->
+        </div>
+        <div class="project">
+            <h3>Easy Peasy App</h3>
+            <p>Sit amet justo donec enim diam vulputate ut. Ut ornare lectus sit amet est placerat in egestas. 
+                Erat velit scelerisque in dictum non consectetur a erat nam.</p>
+            <!-- icon -->
+            <!-- icon -->
+            <!-- icon -->
+        </div>
+        <div class="project">
+            <h3>Ad Blocker</h3>
+            <p>Faucibus interdum posuere lorem ipsum dolor sit amet. Duis tristique sollicitudin nibh sit amet 
+                commodo nulla. Cursus sit amet dictum sit. Pretium vulputate sapien nec sagittis aliquam 
+                malesuada bibendum arcu.</p>
+            <!-- icon -->
+            <!-- icon -->
+            <!-- icon -->
+        </div>
+        <div class="project">
+            <h3>Money Maker</h3>
+            <p>A iaculis at erat pellentesque adipiscing commodo elit at imperdiet. Egestas fringilla 
+                phasellus faucibus scelerisque eleifend donec pretium vulputate.</p>
+            <!-- icon -->
+            <!-- icon -->
+            <!-- icon -->
+        </div>
+    </div>
+
+    <div class="rightSidebar">
+    
+        <div class="announcements">
+            <h2>Announcements</h2>
+            <div class="announcePost">
+                <h4>Site Maintenance</h4>
+                <p>Nibh nisl condimentum id venenatis a. Etiam dignissim diam 
+                    quis enim lobortis scelerisque fermentum dui faucibus.</p>
+            </div>
+            <div class="announcePost">
+                <h4>Community Share Day</h4>
+                <p>Nibh nisl condimentum id venenatis a. Etiam dignissim diam 
+                    quis enim lobortis scelerisque fermentum dui faucibus.</p>
+            </div>
+            <div class="announcePost">
+                <h4>Updated Privacy Policy</h4>
+                <p>Nibh nisl condimentum id venenatis a. Etiam dignissim diam 
+                    quis enim lobortis scelerisque fermentum dui faucibus.</p>
+            </div>
+        </div>
+
+        <div class="trending">
+            <h2>trending</h2>
+            <div class="tendProfile">
+                <!-- pfp icon -->
+                <p class="trending@">teagan</p>
+                <p class="tagline">World Peace Builder</p>
+            </div>
+            <div class="tendProfile">
+                <!-- pfp icon -->
+                <p class="trending@">morgan</p>
+                <p class="tagline">Super Cool Project</p>
+            </div>
+            <div class="tendProfile">
+                <!-- pfp icon -->
+                <p class="trending@">kendall</p>
+                <p class="tagline">Life Changing App</p>
+            </div>
+            <div class="tendProfile">
+                <!-- pfp icon -->
+                <p class="trending@">alex</p>
+                <p class="tagline">No Traffic Maker</p>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
